tried fixing underline on mobile. no luck

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ body {
 	font-size: 1rem;
 }
 
+header a h1 {
+	text-decoration: none;
+}
 h1 {
 	font-family: 'Chango', cursive;
 	color: #E04847;
